styles.css
* {
    font-family: 'Roboto', sans-serif;
}

body {
    margin: 0;
}

.header {
    background-color: #1F2937;
    padding: 32px 196px;
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.logo {
    font-size: 24px;
    font-weight: bold;
    color: #F9FAF8;
}

.header-links {
    font-size: 18px;
    color: #E5E7EB;
    list-style-type: none;
    display: flex;
    margin: 0;
    gap: 16px;
}

.hero {
    background-color: #1F2937;
    padding: 64px 196px;
}
.hero-content {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    flex-wrap: wrap;
    width: 500px;
}

.hero-main-text {
    font-size: 48px;
    font-weight: 900;
    color: #F9FAF8;
}

.hero-secondary-text {
    font-size: 18px;
    color: #E5E7EB;
}

.hero-image {
    width: 550px;
}

